# mediastar_remote

./: .gitignore  CHANGELOG.md  CREATE_ICON_GUIDE.md  README.md  RELEASE_SUMMARY.md  SECURITY.md  build.py  create_icon.ps1  create_icon.py  create_release.py
.github/: release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apk_source/: settings.gradle
apk_source/app/: build.gradle
apk_source/app/src/main/: AndroidManifest.xml
apk_source/app/src/main/com/rtsp-h264-client-master/: build.gradle
apk_source/app/src/main/java/android/: UnusedStub.java
apk_source/app/src/main/res/anim/: bottom_in.xml  bottom_out.xml  dialog_in.xml  dialog_out.xml  left_in.xml  left_out.xml  out_downtoup.xml  right_in.xml  right_out.xml  top_in.xml  top_out.xml
docs/: AI_FEATURES.md  PROTOCOL_REFERENCE.md
gm_c/: CMakeLists.txt  README.md  build.bat  gmscreen.rc  gmscreen_channels.json  imgui.ini  resource.h  test_simple.cpp
gm_c/include/ai/: cw_predictor.h  ollama_client.h
gm_c/include/cccam/: ca_engine.h  cccam_config.h  cccam_learner.h  cccam_server.h  channel_scanner.h  ecm_services.h
gm_c/include/gui/: channel_list_view.h  device_discovery_dialog.h  main_window.h  remote_control.h
gm_c/include/stb/: channel_cache.h  compression.h  constants.h  crash_log.h  crypto.h  custom_lists.h  favorites_manager.h  message_processor.h  models.h  network.h  rcu_keys.h  rtsp_viewer.h  serialization.h  stb_client.h
gm_c/src/: main.cpp
gm_c/src/console/: main.cpp
gm_c/src/gui/: channel_list_view.cpp  device_discovery_dialog.cpp  imgui_app.cpp  main.cpp  main_imgui.cpp  main_window.cpp  remote_control.cpp
gm_c/src/stb/: compression.cpp  crypto.cpp  favorites_manager.cpp  message_processor.cpp  models.cpp  network.cpp  serialization.cpp  stb_client.cpp
gm_python/: MEDIASTAR_4030_4K_PROTOCOL.md  RUN_UVICORN_WINDOWS.md  restart_server.py
gm_python/app/: main.py  main.py.bak
gm_python/app/static/ui/: app.js  demo.html  index.html  main.js
gm_python/app/stb/: client.py  compression.py  connection_monitor.py  constants.py  discovery.py  favorites.py  message_processor.py  models.py  rcu_keys.py  receiver.py  scramble.py  serializers.py  stb_websocket_manager.py  websocket_client.py
gm_python/app/stb/_cache/: channels_192.168.1.2_20000.json
release/v2.0.0/: CONTRIBUTING.md  README.md  README_RELEASE.txt  RELEASE_NOTES.md  checksum.txt  version.json
release/v2.0.0/docs/: CCCAM_SETUP.md
update_patch/: MS-4030_BlueMenu_Ver1.11.20688_2026-1-22_ANALYSIS.md  MS-4030_RTSP_Analysis.md  analyze2.ps1  analyze2_out.txt  analyze_bin.ps1  analyze_bin_out.txt  auto_iptv_test.py  check_streaming.py  complete_stream_test.py  deep2.py  deep2_out.txt  deep_analyze.py  deep_out.txt  extract_sections.py  final_stream_test.py  final_working_test.py  gentle_stream_test.py  rtp_listener.py  sections_out.txt  simple_iptv_test.py  simple_rtsp_test.py  test_dvb_to_iptv.py  test_rtsp_urls.py  test_stb_network.py  test_video_stream.py  working_rtsp_test.py
(+4073 files in other folders)
